# BP-Inference-EVOLVE

./: .gitignore  README.md  pyproject.toml  requirements.txt
bp_inference/: __init__.py  ablation.py  bigru.py  calibration.py  data.py  export.py  inception1d.py  mamba_ssm.py  metrics.py  minirocket.py  resunet_sa.py  runet_attn.py  s4.py  splits.py  tcn.py  train.py  transformer1d.py  wavelet_net.py  xresnet1d.py
experiments/iter_0000/: manifest.json  manifest_cpu.json  manifest_gpu.json
experiments/iter_0000/seed_mamba_ssm_cal/: result.json  run.py  spec.json
experiments/iter_0000/seed_mamba_ssm_free/: result.json  spec.json
experiments/iter_0000/seed_minirocket_cal/: result.json  (+1 more)
experiments/iter_0001/: manifest.json  manifest_cpu.json  manifest_gpu.json
experiments/lever_input_rep/: manifest_gpu.json
experiments/lever_loss/: manifest_gpu.json
experiments/lever_rf/: manifest_gpu.json
experiments/screen_arch/: manifest.json  manifest_gpu.json
framework/: __init__.py  breakdown.py  eval.py  fitness.py  iteration.py  ledger.py  meta.py  population.py  render.py  seeds.py
scripts/: bootstrap_ledger.py  build_cache.slurm  build_pulsedb_cache.py  ingest_results.py  prepare_iteration.py  render_iteration.py  render_lever_screen.py  render_screen.py  render_seed_batch.py  run_array.slurm  run_array_cpu.slurm  run_submission.slurm
tests/: conftest.py
tests/integration/: test_critic_arms_race.py  test_iteration_round_trip.py  test_level2_end_to_end.py  test_meta_drift_under_failures.py  test_population_genitor_cycle.py  test_subset_transfer.py
(+191 files in other folders)
